front: fix horizontal scroll in infra editor

--- a/front/src/styles/scss/applications/editor/_editor.scss
+++ b/front/src/styles/scss/applications/editor/_editor.scss
@@ -109,7 +109,7 @@
 
   .panel-box {
     width: 400px;
-    height: 100%;
+    height: auto;
     overflow-y: auto;
   }
 
